fixed card layout issue

--- a/domain/portfolio/style.module.css
+++ b/domain/portfolio/style.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: clamp(50px, 75%, 50rem);
-    margin: 2rem auto 0px auto;
+    margin: 3rem auto 0px auto;
     border-radius: 1rem;
     overflow: hidden;
     @apply bg-white shadow-xl text-black;
